# pacrank

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: ci.yml  release.yml
packaging/arch/: .gitignore  PKGBUILD  PKGBUILD.in  prepare.sh
src/: arch_desc.rs  dl_test.rs  largest_file_discovery.rs  lib.rs  main.rs  mirrors.rs  ping_stat.rs  ping_test.rs
