[package]
name = "pacrank"
version = "0.1.4"
edition = "2024"
rust-version = "1.91"
authors = ["mexus"]
description = "Pick the fastest Archlinux mirrors (I use Arch btw)"
readme = "README.md"
repository = "https://github.com/mexus/pacrank"
license = "Apache-2.0 OR MIT"
keywords = ["archlinux", "pacman", "mirror", "mirrorlist", "cli"]
categories = ["command-line-utilities", "network-programming"]

[package.metadata.binstall]
pkg-url = "{repo}/releases/download/v{version}/{name}-{target}.{archive-format}"
pkg-fmt = "tgz"
bin-dir = "{bin}{binary-ext}"

[dependencies]
camino = "1.2.2"
clap = { version = "4.6.1", features = ["derive"] }
clap_complete = "4.6.2"
display-error-chain = "0.2.2"
flate2 = "1.1.9"
futures-util = "0.3.32"
human-repr = "1.1.0"
indicatif = "0.18.4"
nix = { version = "0.31.2", features = ["user"] }
nonzero_ext = "0.3.0"
rand = "0.10.1"

reqwest = { version = "0.13.2", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
snafu = "0.9.0"
tar = "0.4.45"
tempfile = "3.27.0"
time = { version = "0.3.47", features = ["serde", "parsing", "formatting"] }
tokio = { version = "1.52.1", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["ansi", "env-filter", "fmt"] }
url = { version = "2.5.8", features = ["serde"] }
zstd = "0.13.3"

# # TUI
# ratatui = "0.30.0"
